# sdlc-multi-agent-system

./: .gitignore  .mcp.json  .tmp-model-create-entity.md  CLAUDE.md  README.md  alembic.ini  engagements-config.yaml  enterprise-repository-config.yaml  pyproject.toml
agents/csco/: AGENT.md
agents/devops-platform/: AGENT.md
agents/implementing-developer/: AGENT.md
agents/product-owner/: AGENT.md
agents/project-manager/: AGENT.md
agents/qa-engineer/: AGENT.md
agents/sales-marketing/: AGENT.md
agents/software-architect/: AGENT.md
agents/solution-architect/: AGENT.md
docs/: bifrost-goose-mcp-setup.md  framework-model-tools-friction-2026-04-08.md  framework-tools-improvements.md  new-agent-session-prefix.md  puml-bug-reports.md  wave-continuation-plan-2026-04-08.md
engagements/ENG-001/: engagement-profile.md  workflow.db
external-sources/: EXAMPLE-confluence.config.yaml  EXAMPLE-git.config.yaml  EXAMPLE-jira.config.yaml
framework/: agent-index.md  agent-personalities.md  agent-runtime-spec.md  agile-adm-cadence.md  algedonic-protocol.md  architecture-repository-design.md  artifact-registry-design.md  clarification-protocol.md  diagram-conventions.md  discovery-protocol.md  framework-knowledge-index.md  general_python_coding_guidelines.md  learning-protocol.md  orchestration-topology.md  raci-matrix.md  repository-conventions.md  sdlc-entry-points.md  tool-catalog.md
framework/artifact-schemas/: application-architecture.schema.md  architecture-contract.schema.md  architecture-vision.schema.md  business-architecture.schema.md  change-record.schema.md  data-architecture.schema.md  diagram-catalog.schema.md  entity-conventions.md  implementation-plan.schema.md  learning-entry.schema.md  repository-map.schema.md  requirements-register.schema.md  safety-constraint-overlay.schema.md  technology-architecture.schema.md  test-strategy.schema.md
memory/: MEMORY.md  feedback_approach.md  project_state.md
scripts/: _demo_taskflow.py  add_step0m_and_memory_close.py  demo_scaffold.py  demo_setup.py  demo_teardown.py  demo_verify.py  patch_skill_sections.py  triage_learning_candidates.py
specs/: IMPLEMENTATION_PLAN.md
specs/agent-personalities/: devops-platform-engineering.md  implementing-software-developer.md  product-owner.md  safety-engineer--chief-compliance-officer.md  sales-marketing-manager.md  software-architect--principal-engineer.md  solution-architect.md
src/agents/: __init__.py  _skill_sections.py  base.py  deps.py  learning_store.py  memento_store.py  roles.py  skill_loader.py
src/common/: archimate_types.py  domain_vocabulary.py  model_query.py  model_query_cli.py  model_query_parsing.py  model_query_repository.py  model_query_scoring.py  model_query_types.py  model_verifier.py  model_verifier_incremental.py  model_verifier_parsing.py  model_verifier_registry.py  model_verifier_rules.py  model_verifier_syntax.py  model_verifier_types.py  model_write.py  model_write_catalog.py  model_write_formatting.py
src/events/: __init__.py  event_store.py  export.py  registry.py  replay.py  replay_builder.py
src/models/: __init__.py  learning.py  llm_config.py  memento.py
src/orchestration/: __init__.py  __main__.py  graph.py  graph_state.py  nodes.py  pm_decision.py  routing.py  session.py
(+3705 files in other folders)
